<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="match_parent">



    <!--<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/radio_group_categoria"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_centerHorizontal="true">-->
        <!--<RadioButton android:id="@+id/radio_trabalho"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/trabalho"/>-->
        <!--<RadioButton android:id="@+id/radio_lazer"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/lazer" />-->
    <!--</RadioGroup>-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomeAtividade"/>


    <LinearLayout
        android:id="@+id/ll_botoes_categorias"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomeAtividade">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/baixa"
                android:id="@+id/textView4"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button_baixa"
                android:backgroundTint="#00ff40"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/media"
                android:id="@+id/textView5"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button_media"
                android:backgroundTint="#f89a0b"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/alta"
                android:id="@+id/textView6" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button_alta"
                android:backgroundTint="#ff0000"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_botoes_categorias"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deletar"
            android:id="@+id/botao_deletar"
            android:layout_margin="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#b71c1c" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:id="@+id/botao_salvar"
            android:layout_margin="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#2196f3" />
    </LinearLayout>


</RelativeLayout>