<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufcg.les.povmt.activities.YesterdayTiActivity"
    android:id="@+id/layout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/textView8">


        <LinearLayout
            android:id="@+id/ll_botoes_categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baixa"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/button_baixa"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#00ff40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/button_media"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#f89a0b" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alta"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/button_alta"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ff0000" />

            </LinearLayout>
        </LinearLayout>




    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textViewStringTempo"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textViewStringTempo"
            android:layout_gravity="center_horizontal">

            <AutoCompleteTextView
                android:id="@+id/edtDesc"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="38dp"
                android:hint="LES"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edtH"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:gravity="right"
                android:hint="00"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtH"
                android:layout_alignTop="@+id/edtH"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/edtH"
                android:layout_toRightOf="@+id/edtH"
                android:gravity="bottom"
                android:text="h"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/edtM"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtH"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10"
                android:gravity="right"
                android:hint="00"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtM"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/edtM"
                android:layout_toRightOf="@+id/edtM"
                android:gravity="bottom"
                android:text="min"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray" />
        </RelativeLayout>
    </FrameLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_plus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Ti de ontem"
        android:id="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="25dp" />


</RelativeLayout>
